// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpriteEditor - Snapshot Tests renders correctly when closed 1`] = `<div />`;

exports[`SpriteEditor - Snapshot Tests renders correctly when open 1`] = `
<div>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 960px; max-width: calc(100vw - 24px); height: 780px; max-height: calc(100vh - 24px); display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 8px; flex-shrink: 0; padding: 8px 12px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-weight: 700; font-size: 14px; color: rgb(232, 242, 244); white-space: nowrap;"
        >
          Sprite Editor
        </span>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          data-testid="stroke-width-stepper"
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            W
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              1
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Scale
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              10×
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 5px; padding: 0px 8px; height: 26px; background: rgb(17, 68, 75); border-radius: 4px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 90px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244);"
            value="sprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 4px 10px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 4px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12px; display: inline-flex; align-items: center; gap: 4px;"
          type="button"
        >
          <svg
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
        <button
          data-testid="close-button"
          style="all: unset; cursor: pointer; width: 26px; height: 26px; border-radius: 4px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M6 6l12 12M18 6L6 18"
            />
          </svg>
        </button>
      </div>
      <div
        style="display: flex; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex-shrink: 0; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <button
            data-testid="tool-editpath"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Edit Path"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M4 18 C9 18 9 6 14 6 L20 6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="1.8"
              />
              <circle
                cx="4"
                cy="18"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="14"
                cy="6"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="20"
                cy="6"
                fill="currentColor"
                r="2"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 5px 5px 0 0; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Bring forward"
            type="button"
          >
            ↑
          </button>
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 0 0 5px 5px; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Send backward"
            type="button"
          >
            ↓
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; overflow: auto; display: flex; align-items: center; justify-content: center; padding: 24px;"
        >
          <div
            style="width: 640px; height: 640px; border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
          >
            <div
              data-testid="sprite-canvas"
              height="640"
              tabindex="0"
              width="640"
            >
              <div>
                <div />
                <div
                  points="312,320,328,320"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  points="320,312,320,328"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  fill="transparent"
                  radius="3"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                  x="320"
                  y="320"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; flex-shrink: 0; height: 38px; padding: 0px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184); font-style: italic;"
        >
          Click and drag to draw a rectangle
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <button
          style="all: unset; cursor: pointer; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 500; letter-spacing: 0.4px; text-transform: uppercase; border: 1px solid rgba(148, 210, 216, 0.14); background: transparent; color: rgb(155, 179, 184);"
          type="button"
        >
          Grid
        </button>
        <div
          style="display: inline-flex; align-items: center; gap: 4px; opacity: 0.3; pointer-events: none;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Size
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
          <span
            style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
          >
            8
          </span>
        </div>
        <div
          style="width: 1px; height: 16px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          x: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          y: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpriteEditor - Snapshot Tests renders with custom size 128 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 960px; max-width: calc(100vw - 24px); height: 780px; max-height: calc(100vh - 24px); display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 8px; flex-shrink: 0; padding: 8px 12px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-weight: 700; font-size: 14px; color: rgb(232, 242, 244); white-space: nowrap;"
        >
          Sprite Editor
        </span>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          data-testid="stroke-width-stepper"
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            W
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              1
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Scale
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              10×
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 5px; padding: 0px 8px; height: 26px; background: rgb(17, 68, 75); border-radius: 4px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 90px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244);"
            value="sprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 4px 10px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 4px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12px; display: inline-flex; align-items: center; gap: 4px;"
          type="button"
        >
          <svg
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
        <button
          data-testid="close-button"
          style="all: unset; cursor: pointer; width: 26px; height: 26px; border-radius: 4px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M6 6l12 12M18 6L6 18"
            />
          </svg>
        </button>
      </div>
      <div
        style="display: flex; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex-shrink: 0; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <button
            data-testid="tool-editpath"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Edit Path"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M4 18 C9 18 9 6 14 6 L20 6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="1.8"
              />
              <circle
                cx="4"
                cy="18"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="14"
                cy="6"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="20"
                cy="6"
                fill="currentColor"
                r="2"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 5px 5px 0 0; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Bring forward"
            type="button"
          >
            ↑
          </button>
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 0 0 5px 5px; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Send backward"
            type="button"
          >
            ↓
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; overflow: auto; display: flex; align-items: center; justify-content: center; padding: 24px;"
        >
          <div
            style="width: 1280px; height: 1280px; border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
          >
            <div
              data-testid="sprite-canvas"
              height="1280"
              tabindex="0"
              width="1280"
            >
              <div>
                <div />
                <div
                  points="632,640,648,640"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  points="640,632,640,648"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  fill="transparent"
                  radius="3"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                  x="640"
                  y="640"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; flex-shrink: 0; height: 38px; padding: 0px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184); font-style: italic;"
        >
          Click and drag to draw a rectangle
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <button
          style="all: unset; cursor: pointer; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 500; letter-spacing: 0.4px; text-transform: uppercase; border: 1px solid rgba(148, 210, 216, 0.14); background: transparent; color: rgb(155, 179, 184);"
          type="button"
        >
          Grid
        </button>
        <div
          style="display: inline-flex; align-items: center; gap: 4px; opacity: 0.3; pointer-events: none;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Size
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
          <span
            style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
          >
            8
          </span>
        </div>
        <div
          style="width: 1px; height: 16px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          x: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          y: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpriteEditor - Snapshot Tests renders with default props 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 960px; max-width: calc(100vw - 24px); height: 780px; max-height: calc(100vh - 24px); display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 8px; flex-shrink: 0; padding: 8px 12px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-weight: 700; font-size: 14px; color: rgb(232, 242, 244); white-space: nowrap;"
        >
          Sprite Editor
        </span>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          data-testid="stroke-width-stepper"
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            W
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              1
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Scale
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              10×
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 5px; padding: 0px 8px; height: 26px; background: rgb(17, 68, 75); border-radius: 4px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 90px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244);"
            value="sprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 4px 10px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 4px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12px; display: inline-flex; align-items: center; gap: 4px;"
          type="button"
        >
          <svg
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
        <button
          data-testid="close-button"
          style="all: unset; cursor: pointer; width: 26px; height: 26px; border-radius: 4px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M6 6l12 12M18 6L6 18"
            />
          </svg>
        </button>
      </div>
      <div
        style="display: flex; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex-shrink: 0; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <button
            data-testid="tool-editpath"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Edit Path"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M4 18 C9 18 9 6 14 6 L20 6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="1.8"
              />
              <circle
                cx="4"
                cy="18"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="14"
                cy="6"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="20"
                cy="6"
                fill="currentColor"
                r="2"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 5px 5px 0 0; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Bring forward"
            type="button"
          >
            ↑
          </button>
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 0 0 5px 5px; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Send backward"
            type="button"
          >
            ↓
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; overflow: auto; display: flex; align-items: center; justify-content: center; padding: 24px;"
        >
          <div
            style="width: 640px; height: 640px; border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
          >
            <div
              data-testid="sprite-canvas"
              height="640"
              tabindex="0"
              width="640"
            >
              <div>
                <div />
                <div
                  points="312,320,328,320"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  points="320,312,320,328"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  fill="transparent"
                  radius="3"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                  x="320"
                  y="320"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; flex-shrink: 0; height: 38px; padding: 0px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184); font-style: italic;"
        >
          Click and drag to draw a rectangle
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <button
          style="all: unset; cursor: pointer; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 500; letter-spacing: 0.4px; text-transform: uppercase; border: 1px solid rgba(148, 210, 216, 0.14); background: transparent; color: rgb(155, 179, 184);"
          type="button"
        >
          Grid
        </button>
        <div
          style="display: inline-flex; align-items: center; gap: 4px; opacity: 0.3; pointer-events: none;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Size
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
          <span
            style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
          >
            8
          </span>
        </div>
        <div
          style="width: 1px; height: 16px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          x: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          y: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpriteEditor - Snapshot Tests renders with initial name 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 960px; max-width: calc(100vw - 24px); height: 780px; max-height: calc(100vh - 24px); display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 8px; flex-shrink: 0; padding: 8px 12px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-weight: 700; font-size: 14px; color: rgb(232, 242, 244); white-space: nowrap;"
        >
          Sprite Editor
        </span>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 26px; padding: 0px 8px; display: inline-flex; align-items: center; gap: 5px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 4px; font-size: 11px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 14px; height: 14px; border-radius: 2px; flex-shrink: 0; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          data-testid="stroke-width-stepper"
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            W
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              1
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="width: 1px; height: 20px; background: rgba(148, 210, 216, 0.14); margin: 0px 2px;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 4px;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Scale
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <span
              style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
            >
              10×
            </span>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; line-height: 1; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
        </div>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 5px; padding: 0px 8px; height: 26px; background: rgb(17, 68, 75); border-radius: 4px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 90px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244);"
            value="mySprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 4px 10px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 4px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12px; display: inline-flex; align-items: center; gap: 4px;"
          type="button"
        >
          <svg
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
        <button
          data-testid="close-button"
          style="all: unset; cursor: pointer; width: 26px; height: 26px; border-radius: 4px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M6 6l12 12M18 6L6 18"
            />
          </svg>
        </button>
      </div>
      <div
        style="display: flex; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex-shrink: 0; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <button
            data-testid="tool-editpath"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Edit Path"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M4 18 C9 18 9 6 14 6 L20 6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="1.8"
              />
              <circle
                cx="4"
                cy="18"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="14"
                cy="6"
                fill="currentColor"
                r="2"
              />
              <circle
                cx="20"
                cy="6"
                fill="currentColor"
                r="2"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 5px 5px 0 0; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Bring forward"
            type="button"
          >
            ↑
          </button>
          <button
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 28px; border-radius: 0 0 5px 5px; display: inline-flex; align-items: center; justify-content: center; border: 1px solid rgba(148, 210, 216, 0.14); color: rgb(232, 242, 244); font-size: 14px; opacity: 0.3;"
            title="Send backward"
            type="button"
          >
            ↓
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; overflow: auto; display: flex; align-items: center; justify-content: center; padding: 24px;"
        >
          <div
            style="width: 640px; height: 640px; border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
          >
            <div
              data-testid="sprite-canvas"
              height="640"
              tabindex="0"
              width="640"
            >
              <div>
                <div />
                <div
                  points="312,320,328,320"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  points="320,312,320,328"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                />
                <div
                  fill="transparent"
                  radius="3"
                  stroke="rgba(0,0,0,0.4)"
                  stroke-width="1"
                  x="320"
                  y="320"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; flex-shrink: 0; height: 38px; padding: 0px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184); font-style: italic;"
        >
          Click and drag to draw a rectangle
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <button
          style="all: unset; cursor: pointer; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 500; letter-spacing: 0.4px; text-transform: uppercase; border: 1px solid rgba(148, 210, 216, 0.14); background: transparent; color: rgb(155, 179, 184);"
          type="button"
        >
          Grid
        </button>
        <div
          style="display: inline-flex; align-items: center; gap: 4px; opacity: 0.3; pointer-events: none;"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Size
          </span>
          <div
            style="display: inline-flex; align-items: center;"
          >
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 3px 0 0 3px;"
              type="button"
            >
              −
            </button>
            <button
              style="all: unset; cursor: pointer; width: 14px; height: 20px; display: inline-flex; align-items: center; justify-content: center; color: rgb(232, 242, 244); font-size: 14px; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 0 3px 3px 0;"
              type="button"
            >
              +
            </button>
          </div>
          <span
            style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(232, 242, 244); min-width: 22px; text-align: center; border: 1px solid rgba(148, 210, 216, 0.14); height: 20px; display: inline-flex; align-items: center; justify-content: center;"
          >
            8
          </span>
        </div>
        <div
          style="width: 1px; height: 16px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          x: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
        >
          y: 
          <span
            style="color: rgb(232, 242, 244);"
          >
            0
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
